--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<name>f1-results-api</name>
-	<description>F1 API using GraphQL - Spring Boot - Mockito</description>
+	<description>F1 API - Spring Boot - Mockito</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
